Q3/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  type: NodePort
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
