Q3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: streaming.quickalgorithm.com
      http:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: frontend
              port:
                number: 3000
